Bug 458545 - 'Install' button remains after installing a flatpak bundle
Summary: 'Install' button remains after installing a flatpak bundle
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-31 13:02 UTC by Patrick Silva
Modified: 2022-09-08 04:02 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-08-31 13:02:25 UTC
STEPS TO REPRODUCE
1. download flatpak bundle of flameshot:
https://github.com/flameshot-org/flameshot/releases
2. open the downloaded file with Discover
3. click on 'Install' button and enter your password

OBSERVED RESULT
the flatpak bundle is successfuly installed, but the 'Install' button remains

EXPECTED RESULT
'Install' button should be replaced with 'Remove' button

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 1 Patrick Silva 2022-08-31 13:46:14 UTC
ops, here are the correct versions.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 2 Aleix Pol 2022-09-06 13:55:23 UTC
Can anyone confirm https://invent.kde.org/plasma/discover/-/merge_requests/367/ fixes it?

I messed up the MR a bit and we didn't get a notification.
Comment 3 Aleix Pol 2022-09-06 14:30:31 UTC
Git commit a77bf20f1a5f264f94091e25dd1b227603419450 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 06/09/2022 at 13:54.
Pushed by apol into branch 'master'.

flatpak: Use FlatpakResource::updateFromRef for bundles too

It helps initialize the resource's fields that will be later used for
different queries. For example, it allows to look it back up after
getting the resource installed.

M  +1    -1    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp

https://invent.kde.org/plasma/discover/commit/a77bf20f1a5f264f94091e25dd1b227603419450