flatpak: Use FlatpakResource::updateFromRef for bundles too

It helps initialize the resource's fields that will be later used for
different queries. For example, it allows to look it back up after
getting the resource installed.

BUG: 458545